--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -143,4 +143,119 @@
   url    = {https://blog.ninja-squad.com/2019/05/07/what-is-angular-ivy/},
 }
 
+@Online{AngularRxjs,
+  author = {Angular},
+  title  = {The RxJs library},
+  url    = {https://angular.io/guide/rx-library},
+}
+
+@Online{RxJsDocs,
+  author = {RxJs},
+  title  = {RxJs overview},
+  url    = {https://rxjs.dev/guide/overview},
+}
+
+@Online{NgRxStore,
+  author = {NgRx},
+  title  = {NgRx store},
+  url    = {https://ngrx.io/guide/store},
+}
+
+@Online{NgRxActions,
+  author = {NgRx},
+  title  = {NgRx actions},
+  url    = {https://ngrx.io/guide/store/actions},
+}
+
+@Online{NgRxSelectors,
+  author = {NgRx},
+  title  = {NgRx selectors},
+  url    = {https://ngrx.io/guide/store/selectors},
+}
+
+@Online{AngularUni2020,
+  author = {Angular university},
+  date   = {2020-12-16},
+  title  = {Ngrx Store - An Architecture Guide},
+  url    = {https://blog.angular-university.io/angular-ngrx-store-and-effects-crash-course/},
+}
+
+@Online{NgRxEffects,
+  author = {NgRx},
+  title  = {NgRx effects},
+  url    = {https://ngrx.io/guide/effects},
+}
+
+@Online{Sargsyan2020,
+  author = {Areg Sargsyan},
+  date   = {2020-06-11},
+  title  = {How to improve performance of Angular application with Change Detection and NgZone},
+  url    = {https://medium.com/swlh/angular-change-detection-ngzone-a5103fab3866},
+}
+
+@Online{Simon2018,
+  author = {Gary Simon},
+  date   = {2018-04-06},
+  title  = {Ngrx Store Tutorial for Angular - Learn State Management for Angular},
+  url    = {https://www.youtube.com/watch?v=9P5DTlg9oLc},
+}
+
+@Online{ngHouston2019,
+  author = {ngHouston},
+  date   = {2019-11-06},
+  title  = {ngHouston - Learn Basic Zone.js by Examples w/ Jia Li},
+  url    = {https://www.youtube.com/watch?v=dAF6Ep6ECC0},
+}
+
+@Online{AngularAir2019,
+  author = {Angular Air},
+  date   = {2019-11-06},
+  title  = {ngAir 224 - Zone.js in Depth with Jai Li},
+  url    = {https://www.youtube.com/watch?v=6A7JkzpJw0w},
+}
+
+@Online{Microsoft2014,
+  author = {Microsoft},
+  date   = {2014-10-06},
+  title  = {Introduction to SignalR},
+  url    = {https://docs.microsoft.com/en-us/aspnet/signalr/overview/getting-started/introduction-to-signalr},
+}
+
+@Online{Goudar2019,
+  author = {Yallaling Goudar},
+  date   = {2019-01-17},
+  title  = {One-way and Two-way Data Binding in Angular},
+  url    = {https://www.pluralsight.com/guides/one-and-two-way-data-binding-angular},
+}
+
+@Online{AngularEvent,
+  author = {Angular},
+  title  = {Event binding},
+  url    = {https://angular.io/guide/event-binding},
+}
+
+@Online{AngularProperty,
+  author = {Angular},
+  title  = {Property binding},
+  url    = {https://angular.io/guide/property-binding},
+}
+
+@CodeFragment{ngZoneSrc,
+  url = {https://github.com/angular/angular/blob/master/packages/core/src/zone/ng_zone.ts},
+}
+
+@Online{AngularUniOnpush2020,
+  author = {Angular university},
+  date   = {2020-12-17},
+  title  = {Angular OnPush Change Detection and Component Design - Avoid Common Pitfalls},
+  url    = {https://blog.angular-university.io/onpush-change-detection-how-it-works/},
+}
+
+@Online{Basal2018,
+  author = {Netanel Basal},
+  date   = {2018-05-01},
+  title  = {A Comprehensive Guide to Angular onPush Change Detection Strategy},
+  url    = {https://netbasal.com/a-comprehensive-guide-to-angular-onpush-change-detection-strategy-5bac493074a4},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
