add basic default application

--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -135,7 +135,7 @@
 
 %\input{inleiding}
 \input{standvanzaken}
-%\input{methodologie}
+\input{methodologie}
 
 % Voeg hier je eigen hoofdstukken toe die de ``corpus'' van je bachelorproef
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
