--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -133,7 +133,7 @@
 % om bijvoorbeeld de inleiding en/of stand van zaken over meerdere hoofdstukken
 % te verspreiden!
 
-%\input{inleiding}
+\input{inleiding}
 \input{standvanzaken}
 \input{methodologie}
 
@@ -141,11 +141,11 @@
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
 % elke fase in je onderzoek in een apart hoofdstuk bespreken.
 
-%\input{...}
+\input{default}
 %\input{...}
 %...
 
-%\input{conclusie}
+\input{conclusie}
 
 %%=============================================================================
 %% Bijlagen
